<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:textColor="@color/black"
    android:background="@color/colorBackground">

    <LinearLayout
        android:id="@+id/signupLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="30dp"
        android:background="@drawable/rounded_corners">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="15dp"
            />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textColorHint="@color/black"
            android:layout_marginBottom="16dp"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Signup"
            android:layout_marginBottom="16dp"
            android:padding="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/colorTextPrimary" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_alignParentBottom="true"
            android:text="@string/already_have_an_account_login"
            android:textColor="@color/black" />
    </LinearLayout>

</RelativeLayout>
